--- a/i3/config
+++ b/i3/config
@@ -105,6 +105,7 @@ set $workspace1 "1: &#xf268;"
 set $workspace2 "2: &#xf120;"
 set $workspace3 "3"
 set $workspace4 "4: &#xf03d;"
+set $workspace9 "9: &#xf0e6;"
 set $workspace10 "10: &#xf1bc;"
 
 # Auto open workspaces to specific monitor
@@ -121,7 +122,7 @@ bindsym $mod+5 workspace 5
 bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
+bindsym $mod+9 workspace $workspace9
 bindsym $mod+0 workspace $workspace10
 
 # move focused container to workspace
@@ -133,7 +134,7 @@ bindsym $mod+Shift+5 move container to workspace 5
 bindsym $mod+Shift+6 move container to workspace 6
 bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
+bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace $workspace10
 
 # Auto open apps on specific workspaces
@@ -142,6 +143,7 @@ for_window [class="Spotify"] move to workspace $workspace10
 assign [class="Chromium"] $workspace1
 assign [class="Terminator"] $workspace2
 assign [class="mpv"] $workspace4
+assign [class="TeamSpeak 3"] $workspace9
 
 # Move workspace to monitor left/right
 
