Enable mouse tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,9 @@ bind r source-file ~/.tmux.conf
 # Enable vim mode when C-b [
 setw -g mode-keys vi
 
+# Enable mouse
+set -g mouse on
+
 # Status bar
 set -g base-index 1
 set -g status-bg colour226
