vim, tmux, git, iterm

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,9 @@ set-option -g default-shell /bin/zsh
 # Reload config file
 bind r source-file ~/.tmux.conf
 
+# Set same auth sock
+#setenv -g SSH_AUTH_SOCK $SSH_AUTH_SOCK
+
 # Enable vim mode when C-b [
 setw -g mode-keys vi
 
@@ -25,5 +28,8 @@ set -g status-right '#[fg=black]%H:%M#[default]'
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Resurrect content of panes
+set -g @resurrect-processes 'ssh'
 
 run '~/.tmux/plugins/tpm/tpm'
