--- a/.gitconfig
+++ b/.gitconfig
@@ -13,3 +13,9 @@
 	undo = reset HEAD --hard
 [rebase]
 	autosquash = true
+[color]
+    branch = auto
+    diff = auto
+    status = auto
+    showbranch = auto
+    ui = true
