--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,6 +25,9 @@ set -g status-left-length 30
 set -g status-left '#[fg=colour241,bold](#S) '
 set -g status-right '#[fg=black]%H:%M#[default]'
 
+# NeoVim ESC time
+set -sg escape-time 0
+
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
