--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,15 +15,16 @@ set -g mouse on
 
 # Status bar
 set -g base-index 1
-set -g status-bg colour226
-set -g status-fg black
-set -g window-status-current-bg colour226
-set -g window-status-current-fg black
+set -g status-bg colour237
+set -g status-fg colour246
+set -g allow-rename off
+set -g window-status-current-bg colour241
+set -g window-status-current-fg colour255
 set -g window-status-current-attr bold
 set -g status-interval 60
 set -g status-left-length 30
 set -g status-left '#[fg=colour241,bold](#S) '
-set -g status-right '#[fg=black]%H:%M#[default]'
+set -g status-right ''
 
 # NeoVim ESC time
 set -sg escape-time 0
