--- a/i3/config
+++ b/i3/config
@@ -101,10 +101,10 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 # switch to workspace
-bindsym $mod+1 workspace number 1
-bindsym $mod+2 workspace number 2
-bindsym $mod+3 workspace number 3
-bindsym $mod+4 workspace number 4
+bindsym $mod+1 workspace 1:terminal
+bindsym $mod+2 workspace 2:chrome
+bindsym $mod+3 workspace 3:slack
+bindsym $mod+4 workspace 4:code
 bindsym $mod+5 workspace number 5
 bindsym $mod+6 workspace number 6
 bindsym $mod+7 workspace number 7
@@ -113,10 +113,10 @@ bindsym $mod+9 workspace number 9
 bindsym $mod+0 workspace number 10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number 1
-bindsym $mod+Shift+2 move container to workspace number 2
-bindsym $mod+Shift+3 move container to workspace number 3
-bindsym $mod+Shift+4 move container to workspace number 4
+bindsym $mod+Shift+1 move container to workspace 1:terminal
+bindsym $mod+Shift+2 move container to workspace 2:chrome
+bindsym $mod+Shift+3 move container to workspace 3:slack
+bindsym $mod+Shift+4 move container to workspace 4:code
 bindsym $mod+Shift+5 move container to workspace number 5
 bindsym $mod+Shift+6 move container to workspace number 6
 bindsym $mod+Shift+7 move container to workspace number 7
@@ -156,7 +156,12 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
+# Lock screen
 bindsym $mod+Shift+x exec i3lock --color=000000 -f
+# Open app on specific workspace
+assign [class="(?i)chrome"] 2:chrome
+assign [class="(?i)slack"] 3:slack
+assign [class="(?i)code"] 4:code
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 
@@ -167,8 +172,11 @@ client.unfocused		$inactive-bg-color	$inactive-bg-color	$inactive-text-color	$pr
 client.focused_inactive	$inactive-bg-color	$inactive-bg-color	$inactive-text-color	$preview-color	
 client.urgent			$urgent-bg-color	$urgent-bg-color	$text-color	$preview-color	
 
+hide_edge_borders both
+
 bar {
-        status_command i3status
+        status_command i3blocks -c ~/.config/i3/i3blocks.conf
+        strip_workspace_numbers yes
         colors{
 			background $bg-color
 			separator #757575
