--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -1,28 +1,12 @@
-# i3blocks config file
-
-# Global properties
-#
-# The top properties below are applied to every block, but can be overridden.
-# Each block command defaults to the script name to avoid boilerplate.
-command=/usr/lib/i3blocks/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
-[volume]
-label=♪ 
-instance=Master
-interval=once
-signal=10
-
-[disk]
-label= 1 
+[battery]
+command=acpi -b 2>/dev/null | grep 'Battery 0' | cut -d',' -f2 | tr -d ' \n'
 interval=30
-
-[disk]
-label= 2 
-instance=/media/storage
-interval=30
+label=⚡
 
 [time]
-command=date '+%Y-%m-%d %H:%M:%S'
+command=date '+%d/%m %H:%M'
 interval=1
+
