--- a/i3/config
+++ b/i3/config
@@ -44,7 +44,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec --no-startup-id dmenu_run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -162,6 +162,9 @@ bindsym $mod+Shift+x exec i3lock --color=000000 -f
 assign [class="(?i)chrome"] 2:chrome
 assign [class="(?i)slack"] 3:slack
 assign [class="(?i)code"] 4:code
+
+# drop windows titles
+for_window [class="^.*"] border pixel 1
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 
