i3:Change grep for battery

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -2,7 +2,7 @@ separator_block_width=15
 markup=none
 
 [battery]
-command=acpi -b 2>/dev/null | grep 'Battery 0' | cut -d',' -f2 | tr -d ' \n'
+command=acpi -b 2>/dev/null | grep '%' | cut -d',' -f2 | tr -d ' \n'
 interval=30
 label=⚡
 
