--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,9 @@
 # Default shell zsh
 set-option -g default-shell /bin/zsh
 
+# Default Terminal
+set -g default-terminal "screen-256color"
+
 # Reload config file
 bind r source-file ~/.tmux.conf
 
