--- a/i3/config
+++ b/i3/config
@@ -102,7 +102,7 @@ bindsym $mod+1 workspace 1:terminal
 bindsym $mod+2 workspace 2:chrome
 bindsym $mod+3 workspace 3:slack
 bindsym $mod+4 workspace 4:code
-bindsym $mod+5 workspace number 5
+bindsym $mod+5 workspace 5:spotify
 bindsym $mod+6 workspace number 6
 bindsym $mod+7 workspace number 7
 bindsym $mod+8 workspace number 8
@@ -114,7 +114,7 @@ bindsym $mod+Shift+1 move container to workspace 1:terminal
 bindsym $mod+Shift+2 move container to workspace 2:chrome
 bindsym $mod+Shift+3 move container to workspace 3:slack
 bindsym $mod+Shift+4 move container to workspace 4:code
-bindsym $mod+Shift+5 move container to workspace number 5
+bindsym $mod+Shift+5 move container to workspace 5:spotify
 bindsym $mod+Shift+6 move container to workspace number 6
 bindsym $mod+Shift+7 move container to workspace number 7
 bindsym $mod+Shift+8 move container to workspace number 8
@@ -159,6 +159,7 @@ bindsym $mod+Shift+x exec i3lock --color=000000 -f
 assign [class="(?i)chrome"] 2:chrome
 assign [class="(?i)slack"] 3:slack
 assign [class="(?i)code"] 4:code
+for_window [class="(?i)spotify"] move to workspace 5:spotify
 
 # drop windows titles
 for_window [class="^.*"] border pixel 1
@@ -188,3 +189,12 @@ bar {
 
         }
 }
+
+# Change language
+exec --no-startup-id "setxkbmap -layout us,gr && setxkbmap -option 'grp:alt_shift_toggle'"
+
+
+## Thinkpad volume buttons
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
