Add python and javascript related changes

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -21,9 +21,7 @@ set -g base-index 1
 set -g status-bg colour237
 set -g status-fg colour246
 set -g allow-rename off
-set -g window-status-current-bg colour241
-set -g window-status-current-fg colour255
-set -g window-status-current-attr bold
+set -g window-status-current-style bg=colour241,fg=colour255,bold
 set -g status-interval 60
 set -g status-left-length 30
 set -g status-left '#[fg=colour241,bold](#S) '
